Working through the Workshop changes and tweaking things along the way in other classes